@@ -14,7 +14,9 @@
  * limitations under the License.
  */
 
-apply plugin: EhDeploy
+plugins {
+  id 'org.ehcache.build.deploy'
+}
 
 dependencies {
   // optional: if we want xml config
@@ -22,26 +24,19 @@ dependencies {
 
   // optional: if we want to use the clustered management layer
   compileOnly project(':clustered:client')
-  compileOnly "org.terracotta:entity-client-api:$parent.entityApiVersion"
-  compileOnly "org.terracotta.management.dist:mnm-nms-agent:$parent.managementVersion"
+  compileOnly "org.terracotta:entity-client-api:$terracottaApisVersion"
+  compileOnly ("org.terracotta.management:nms-agent-entity-client:$terracottaPlatformVersion") {
+    // This is to avoid stats lib being directly used.
+    exclude group:'org.terracotta', module:'statistics'
+  }
 
   compileOnly project(':api')
   compileOnly project(':core')
   compileOnly project(':impl')
-  testCompile ("org.terracotta.management:management-registry:$parent.managementVersion") {
-    exclude group: 'org.terracotta', module: 'statistics'
-  }
-
-  testCompile project(':xml')
-  testCompile "com.fasterxml.jackson.core:jackson-databind:2.7.5"
-}
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
-}
-
-tasks.withType(JavaCompile) {
-  options.compilerArgs += ['-Werror']
+  testImplementation "org.terracotta.management:management-registry:$terracottaPlatformVersion"
+  testImplementation project(':xml')
+  testImplementation project(':impl')
+  testImplementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+  testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
+  testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
 }
