@@ -14,18 +14,27 @@
  * limitations under the License.
  */
 
+plugins {
+  id 'biz.aQute.bnd.builder'
+  id 'org.jayware.osgi-ds'
+  id 'org.ehcache.build.pom-mangle'
+}
+
 group = 'org.ehcache'
 
-apply plugin: EhOsgi
-apply plugin: EhPomMangle
-
 dependencies {
-  compile project(':impl'), project(':xml')
-  compile group: 'javax.transaction', name: 'jta', version: '1.1'
-  testCompile project(path: ':core-spi-test')
-  compile (group: 'org.codehaus.btm', name: 'btm', version: '2.1.4') {
+  api group: 'javax.transaction', name: 'jta', version: '1.1'
+  api project(':core')
+  implementation project(':impl')
+  implementation project(':xml')
+  implementation (group: 'org.codehaus.btm', name: 'btm', version: '2.1.4') {
     exclude group:'org.slf4j', module:'slf4j-api'
   }
+  compileOnly 'org.osgi:org.osgi.service.component.annotations:1.3.0'
+  testImplementation project(':core-spi-test')
+  testImplementation "org.terracotta:statistics:$statisticVersion"
+  testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
+  testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
 }
 
 // For EhPomMangle
@@ -34,14 +43,12 @@ dependencies {
   pomOnlyProvided 'javax.transaction:jta:1.1', 'org.codehaus.btm:btm:2.1.4'
 }
 
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
-}
-
-tasks.withType(JavaCompile) {
-  options.compilerArgs += ['-Werror']
+jar {
+  bnd (
+    'Bundle-SymbolicName': 'org.ehcache.transactions',
+    'Export-Package': 'org.ehcache.transactions.xa.*',
+    'Import-Package': 'bitronix.tm.*;resolution:=optional, javax.transaction.*;resolution:=optional, org.ehcache.xml.*;resolution:=optional, *',
+  )
 }
 
 project.signing {
